annotate twists on holds too, parallelize segment featurization

--- a/jupyter/segment-difficulty.ipynb
+++ b/jupyter/segment-difficulty.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -31,6 +31,11 @@
        "      <th>segment levels</th>\n",
        "      <th>chart level</th>\n",
        "      <th>sord</th>\n",
+       "      <th>Time length</th>\n",
+       "      <th>Num sections</th>\n",
+       "      <th>Mean section length</th>\n",
+       "      <th>Shortest section</th>\n",
+       "      <th>Longest section</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -41,6 +46,11 @@
        "      <td>[2.75, 2.75, 2.75, 2.62, 2.75, 2.9, 2.75, 2.75...</td>\n",
        "      <td>3</td>\n",
        "      <td>singles</td>\n",
+       "      <td>116.571429</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12.571429</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>18.857143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -49,6 +59,11 @@
        "      <td>[2.54, 7.21, 7.01, 7.99, 2.76, 7.5, 8.57]</td>\n",
        "      <td>7</td>\n",
        "      <td>singles</td>\n",
+       "      <td>100.983607</td>\n",
+       "      <td>7</td>\n",
+       "      <td>13.864169</td>\n",
+       "      <td>3.770492</td>\n",
+       "      <td>23.770492</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -57,6 +72,11 @@
        "      <td>[8.48, 7.14, 10.4, 7.2, 7.55, 6.56, 9.55, 10.99]</td>\n",
        "      <td>11</td>\n",
        "      <td>singles</td>\n",
+       "      <td>113.818182</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12.590909</td>\n",
+       "      <td>6.545455</td>\n",
+       "      <td>18.363636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -65,6 +85,11 @@
        "      <td>[2.97, 3.64, 3.64, 4.17]</td>\n",
        "      <td>4</td>\n",
        "      <td>singles</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13.272727</td>\n",
+       "      <td>8.727273</td>\n",
+       "      <td>21.090909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -73,6 +98,11 @@
        "      <td>[12.12, 11.94, 12.83, 12.85, 13.39]</td>\n",
        "      <td>14</td>\n",
        "      <td>doubles</td>\n",
+       "      <td>89.879032</td>\n",
+       "      <td>5</td>\n",
+       "      <td>17.298387</td>\n",
+       "      <td>12.096774</td>\n",
+       "      <td>19.838710</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -86,15 +116,29 @@
        "3   Wedding_Crashers_-_SHORT_CUT_-_-_SHK_S4_SHORTCUT               4.17   \n",
        "4                   With_my_Lover_-_BanYa_D14_ARCADE              13.39   \n",
        "\n",
-       "                                      segment levels  chart level     sord  \n",
-       "0  [2.75, 2.75, 2.75, 2.62, 2.75, 2.9, 2.75, 2.75...            3  singles  \n",
-       "1          [2.54, 7.21, 7.01, 7.99, 2.76, 7.5, 8.57]            7  singles  \n",
-       "2   [8.48, 7.14, 10.4, 7.2, 7.55, 6.56, 9.55, 10.99]           11  singles  \n",
-       "3                           [2.97, 3.64, 3.64, 4.17]            4  singles  \n",
-       "4                [12.12, 11.94, 12.83, 12.85, 13.39]           14  doubles  "
+       "                                      segment levels  chart level     sord  \\\n",
+       "0  [2.75, 2.75, 2.75, 2.62, 2.75, 2.9, 2.75, 2.75...            3  singles   \n",
+       "1          [2.54, 7.21, 7.01, 7.99, 2.76, 7.5, 8.57]            7  singles   \n",
+       "2   [8.48, 7.14, 10.4, 7.2, 7.55, 6.56, 9.55, 10.99]           11  singles   \n",
+       "3                           [2.97, 3.64, 3.64, 4.17]            4  singles   \n",
+       "4                [12.12, 11.94, 12.83, 12.85, 13.39]           14  doubles   \n",
+       "\n",
+       "   Time length  Num sections  Mean section length  Shortest section  \\\n",
+       "0   116.571429             9            12.571429          6.000000   \n",
+       "1   100.983607             7            13.864169          3.770492   \n",
+       "2   113.818182             8            12.590909          6.545455   \n",
+       "3    56.000000             4            13.272727          8.727273   \n",
+       "4    89.879032             5            17.298387         12.096774   \n",
+       "\n",
+       "   Longest section  \n",
+       "0        18.857143  \n",
+       "1        23.770492  \n",
+       "2        18.363636  \n",
+       "3        21.090909  \n",
+       "4        19.838710  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -166,6 +210,11 @@
        "      <th>segment levels</th>\n",
        "      <th>chart level</th>\n",
        "      <th>sord</th>\n",
+       "      <th>Time length</th>\n",
+       "      <th>Num sections</th>\n",
+       "      <th>Mean section length</th>\n",
+       "      <th>Shortest section</th>\n",
+       "      <th>Longest section</th>\n",
        "      <th>max segment level - chart level</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -177,6 +226,11 @@
        "      <td>[4.05, 4.33, 5.02, 4.33, 4.78, 4.79, 6.1, 9.0]</td>\n",
        "      <td>6</td>\n",
        "      <td>singles</td>\n",
+       "      <td>100.215108</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12.296119</td>\n",
+       "      <td>2.125000</td>\n",
+       "      <td>20.485714</td>\n",
        "      <td>3.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -186,6 +240,11 @@
        "      <td>[6.14, 6.22, 5.92, 3.7, 2.93, 8.34, 6.25, 6.43]</td>\n",
        "      <td>6</td>\n",
        "      <td>singles</td>\n",
+       "      <td>118.312500</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14.085938</td>\n",
+       "      <td>7.125000</td>\n",
+       "      <td>22.875000</td>\n",
        "      <td>2.34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -195,6 +254,11 @@
        "      <td>[15.22, 7.09, 15.0, 17.32]</td>\n",
        "      <td>15</td>\n",
        "      <td>doubles</td>\n",
+       "      <td>67.851563</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15.556641</td>\n",
+       "      <td>12.480469</td>\n",
+       "      <td>19.511719</td>\n",
        "      <td>2.32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -204,6 +268,11 @@
        "      <td>[3.56, 4.62, 4.47, 4.33, 4.53, 4.37, 7.31]</td>\n",
        "      <td>5</td>\n",
        "      <td>singles</td>\n",
+       "      <td>103.200000</td>\n",
+       "      <td>7</td>\n",
+       "      <td>13.828571</td>\n",
+       "      <td>11.200000</td>\n",
+       "      <td>19.200000</td>\n",
        "      <td>2.31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -213,10 +282,20 @@
        "      <td>[3.68, 3.82, 2.51, 3.76, 4.19, 4.15, 3.84, 3.7...</td>\n",
        "      <td>4</td>\n",
        "      <td>singles</td>\n",
+       "      <td>113.142857</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12.190476</td>\n",
+       "      <td>8.228571</td>\n",
+       "      <td>21.942857</td>\n",
        "      <td>2.27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -231,6 +310,11 @@
        "      <td>[5.75, 5.67, 15.94, 8.02, 11.95, 16.83, 18.05]</td>\n",
        "      <td>20</td>\n",
        "      <td>singles</td>\n",
+       "      <td>114.800005</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14.571429</td>\n",
+       "      <td>6.733333</td>\n",
+       "      <td>20.933336</td>\n",
        "      <td>-1.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -240,6 +324,11 @@
        "      <td>[9.97, 7.39, 12.43, 7.36, 11.65, 12.85, 12.95]</td>\n",
        "      <td>15</td>\n",
        "      <td>singles</td>\n",
+       "      <td>116.305970</td>\n",
+       "      <td>7</td>\n",
+       "      <td>15.943497</td>\n",
+       "      <td>11.865672</td>\n",
+       "      <td>22.164179</td>\n",
        "      <td>-2.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -249,6 +338,11 @@
        "      <td>[14.54, 7.08, 7.1, 7.37, 14.66, 12.82, 12.82, ...</td>\n",
        "      <td>18</td>\n",
        "      <td>doubles</td>\n",
+       "      <td>118.972612</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14.049659</td>\n",
+       "      <td>9.143836</td>\n",
+       "      <td>20.136986</td>\n",
        "      <td>-2.46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -258,6 +352,11 @@
        "      <td>[11.31, 4.86, 6.32, 6.32, 11.31, 6.85, 6.85, 1...</td>\n",
        "      <td>17</td>\n",
        "      <td>singles</td>\n",
+       "      <td>118.972608</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14.049658</td>\n",
+       "      <td>9.143836</td>\n",
+       "      <td>20.136986</td>\n",
        "      <td>-3.13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -267,11 +366,16 @@
        "      <td>[8.5, 10.31, 10.35, 9.13, 9.69, 7.77, 10.35, 1...</td>\n",
        "      <td>14</td>\n",
        "      <td>singles</td>\n",
+       "      <td>117.677420</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12.258065</td>\n",
+       "      <td>4.645161</td>\n",
+       "      <td>21.677419</td>\n",
        "      <td>-3.65</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3836 rows × 6 columns</p>\n",
+       "<p>3836 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -301,23 +405,36 @@
        "2999  [11.31, 4.86, 6.32, 6.32, 11.31, 6.85, 6.85, 1...           17  singles   \n",
        "35    [8.5, 10.31, 10.35, 9.13, 9.69, 7.77, 10.35, 1...           14  singles   \n",
        "\n",
-       "      max segment level - chart level  \n",
-       "3372                             3.00  \n",
-       "1996                             2.34  \n",
-       "1413                             2.32  \n",
-       "2311                             2.31  \n",
-       "3320                             2.27  \n",
-       "...                               ...  \n",
-       "992                             -1.95  \n",
-       "1698                            -2.05  \n",
-       "2068                            -2.46  \n",
-       "2999                            -3.13  \n",
-       "35                              -3.65  \n",
+       "      Time length  Num sections  Mean section length  Shortest section  \\\n",
+       "3372   100.215108             8            12.296119          2.125000   \n",
+       "1996   118.312500             8            14.085938          7.125000   \n",
+       "1413    67.851563             4            15.556641         12.480469   \n",
+       "2311   103.200000             7            13.828571         11.200000   \n",
+       "3320   113.142857             9            12.190476          8.228571   \n",
+       "...           ...           ...                  ...               ...   \n",
+       "992    114.800005             7            14.571429          6.733333   \n",
+       "1698   116.305970             7            15.943497         11.865672   \n",
+       "2068   118.972612             8            14.049659          9.143836   \n",
+       "2999   118.972608             8            14.049658          9.143836   \n",
+       "35     117.677420             9            12.258065          4.645161   \n",
        "\n",
-       "[3836 rows x 6 columns]"
+       "      Longest section  max segment level - chart level  \n",
+       "3372        20.485714                             3.00  \n",
+       "1996        22.875000                             2.34  \n",
+       "1413        19.511719                             2.32  \n",
+       "2311        19.200000                             2.31  \n",
+       "3320        21.942857                             2.27  \n",
+       "...               ...                              ...  \n",
+       "992         20.933336                            -1.95  \n",
+       "1698        22.164179                            -2.05  \n",
+       "2068        20.136986                            -2.46  \n",
+       "2999        20.136986                            -3.13  \n",
+       "35          21.677419                            -3.65  \n",
+       "\n",
+       "[3836 rows x 11 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +456,7 @@
        "<Axes: xlabel='max segment level - chart level', ylabel='Proportion'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -360,16 +477,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7ff0a9633ce0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7ff0a903eea0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -390,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +533,7 @@
        "Name: max segment level - chart level, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
